--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -51,6 +51,7 @@ header {
     position: relative;
     padding-top: 40px;
     padding-bottom: 40px;
+    height: 108px;
     border-bottom: 1px solid;
 }
 
@@ -138,17 +139,94 @@ header {
 }
 
 /* nav bar - media - start */
-@media only screen and (max-width: 1500px) {
+/* @media only screen and (max-width: 1500px) {
     .base {
         display: none;
     }
+} */
+
+
+/* responsive nav bar - start */
+.res-nav {
+    height: 100vh;
+    width: 500px;
+    position: absolute;
+    background-color: black;
+    right: 0px;
+    padding: 40px 55px;
 }
+
+.res-nav-inner {
+    height: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.rn-language {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 95px;
+}
+
+.lng a {
+    color: red;
+}
+
+.lng a:nth-last-child(-n+2) {
+    margin-left: 20px;
+}
+
+.cancel img {
+    height: 28px;
+    width: 28px;
+}
+
+.rs-menu {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.rs-menu li {
+    list-style-type: none;
+    padding: 10px;
+}
+
+.rs-menu li a {
+    padding: 5px 0;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.rs-link {
+    padding-top: 95px;
+}
+
+.rsl-social {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 50px;
+}
+
+.rsl-social i {
+    font-size: 25px;
+}
+
+.rsl-copyright {
+    font-size: 15px;
+}
+
+/* responsive nav bar - end */
+
+
+
 
 /* nav bar - media - end */
 
 /* nav bar - end */
 /* common code - end */
-
 
 /* home - start */
 .home {
@@ -160,6 +238,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    border: 1px dashed red;
 }
 
 .home-img {
@@ -179,7 +258,6 @@ header {
     width: 450px;
     padding: 0px 15px;
 }
-
 
 .play-out {
     border: 2px solid white;
@@ -223,7 +301,7 @@ header {
     }
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 600px) {
     #home {
         background-image: url(../img/home-2.jpg);
         background-position: center;
@@ -232,11 +310,10 @@ header {
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
     .home {
         height: 100vh;
         padding: 120px 0px;
-
     }
 
     .home-content-main {
@@ -262,20 +339,18 @@ header {
 }
 
 .about-main {
-    border: 2px dashed red;
     padding: 0px 30px;
     height: 488px;
-    width: 1110px;
+    /* width: 1110px; */
+    width: auto;
     display: flex;
 }
 
 .am-content {
     display: flex;
-
 }
 
 .am-content>div {
-    /* border: 2px dashed red; */
     height: 100%;
     width: 50%;
 }
@@ -321,7 +396,6 @@ header {
 }
 
 .about-exp-topic {
-    border: 1px dashed white;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -331,7 +405,7 @@ header {
 }
 
 .aet-head h3 {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 500;
     margin-top: 20px;
 }
@@ -367,6 +441,44 @@ header {
 
 .r3 {
     width: 90%;
+}
+
+@media only screen and (max-width: 1200px) {
+    .about {
+        width: auto;
+        height: auto;
+    }
+
+    .about-main {
+        display: block;
+        width: auto;
+        height: auto;
+    }
+
+    .about-exp-out {
+        width: auto;
+        margin-bottom: 100px;
+    }
+
+    .about-exp-topic {
+        width: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .about {
+        padding: 120px 0px;
+    }
+
+    .about-main {
+        width: min-content;
+    }
+
+    .about-exp-topic {
+        /* width: auto; */
+        width: 377px;
+        padding: 0px 15px;
+    }
 }
 
 /* about - end */
@@ -478,45 +590,62 @@ header {
 /* blog - start */
 .blog {
     width: 100%;
-    height: 790px;
-    border: 2px dashed white;
+    height: auto;
+    padding: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .blog-main {
-    border: 2px dashed green;
-    width: 1110px;
-    height: 570px;
+    width: 100%;
+    height: 100%;
 }
 
-.blog-inner {
-    border: 2px dashed yellow;
-    width: 1110px;
-    height: 570px;
-}
+.blog-head {}
 
 .blog-head h3 {
     font-size: 50px;
     font-weight: 400;
+    margin-bottom: 100px;
 }
 
 .blog-con-main {
-    border: 2px dashed white;
     display: flex;
-    justify-content: space-around;
-    height: 89%;
+    height: 100%;
+    justify-content: space-between;
     align-items: flex-end;
 }
 
 .blog-card {
-    border: 1px solid red;
-    width: 300px;
-    height: 400px;
+    width: 360px;
+    height: 495px;
+    margin: 0px 10px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+@media only screen and (max-width: 1200px) {
+    .blog-con-main {
+        display: block;
+        /* flex-direction: column; */
+    }
+
+    .blog-card {
+        width: 100%;
+        height: 55vh;
+        margin: 0px 0px 50px 0px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .blog {
+        padding: 100px 30px;
+    }
+
+
+
 }
 
 /* blog -  end*/
@@ -525,8 +654,8 @@ header {
 
 .contact {
     width: 100%;
-    height: 630px;
-    padding: 100px;
+    height: 721px;
+    padding: 120px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -535,18 +664,15 @@ header {
 .contact-main {
     height: 100%;
     width: 100%;
-    padding: 0px 100px;
-}
-
-.contact-inner {
+    padding: 0px 30px;
     display: flex;
-    height: 100%;
 }
 
 .contact-address {
-    width: 33%;
-    height: 100%;
+    width: 360px;
+    height: 481px;
     display: flex;
+    margin: 0px 15px;
     padding-bottom: 30px;
     flex-direction: column;
     justify-content: space-between;
@@ -577,8 +703,9 @@ header {
 
 .contact-form-main {
     height: 100%;
-    width: 67%;
-    padding-left: 180px;
+    width: auto;
+    padding: 0px 15px;
+    margin-left: 180px;
 }
 
 .contact-form-inner {
@@ -594,7 +721,7 @@ header {
 }
 
 .form-head>* {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: normal;
 }
 
@@ -623,8 +750,12 @@ header {
 .form>input,
 .form>textarea {
     width: 100%;
-    padding: 15px;
+    padding: 16px;
+    margin-top: 30px;
 }
+
+/* .form>input:first-child {
+} */
 
 .form>*:hover {
     outline: none;
@@ -635,7 +766,48 @@ header {
     border: none;
     background-color: red;
     font-size: 12px;
+    margin-top: 30px;
 }
+
+@media only screen and (max-width: 1200px) {
+    .contact {
+        height: auto;
+    }
+
+    .contact-main {
+        display: block;
+        height: auto;
+    }
+
+    .contact-form-main {
+        margin-left: 0px;
+        padding: 0px;
+        margin: 0px;
+        height: auto;
+        /* width: 100px; */
+    }
+
+    .contact-form-inner {
+        height: 400px;
+    }
+
+    .contact-form-inner .contact {
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .contact {
+        padding: 0px;
+        padding-bottom: 200px;
+        height: auto;
+    }
+
+    .contact-address {
+        width: auto;
+    }
+}
+
 
 /* contact - end */
 
