--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -145,7 +145,6 @@ header {
     }
 } */
 
-
 /* responsive nav bar - start */
 .res-nav {
     height: 100vh;
@@ -175,7 +174,7 @@ header {
     color: red;
 }
 
-.lng a:nth-last-child(-n+2) {
+.lng a:nth-last-child(-n + 2) {
     margin-left: 20px;
 }
 
@@ -219,9 +218,6 @@ header {
 }
 
 /* responsive nav bar - end */
-
-
-
 
 /* nav bar - media - end */
 
@@ -300,8 +296,6 @@ header {
         padding: 0px 15px;
     }
 }
-
-
 
 @media only screen and (max-width: 600px) {
     #home {
@@ -483,11 +477,60 @@ header {
 /* about - end */
 
 /* projects - start */
+.project2,
+.project3 {
+    display: none;
+}
+
 .projects {
     width: 100%;
-    height: 670px;
-    border: 2px dashed red;
-    background-color: chartreuse;
+    padding: 120px;
+    border: 1px dashed white;
+    background-image: url(../img/projects.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.projects-main {
+    border: 1px dashed white;
+    padding: 0px 30px;
+}
+
+.project-show {
+    border: 1px dashed green;
+    margin: 100px 0px;
+}
+
+.project-head h1 {
+    font-size: 120px;
+}
+
+.project-des {
+    margin: 57px 0px;
+}
+
+.project-des p {
+    width: 390px;
+    font-size: 15px;
+    line-height: 30px;
+}
+
+.project-link a {
+    font-size: 12px;
+    background-color: red;
+    padding: 15px 45px;
+}
+
+.project-nav .btn {
+    height: 20px;
+    width: 20px;
+    border: none;
+    border-radius: 50%;
+}
+
+.project-nav .btn:nth-last-child(-n + 2) {
+    margin-left: 20px;
 }
 
 /* projects - end */
@@ -594,10 +637,8 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
-
     .testimonials {
         padding: 120px 0px;
-
     }
 
     .tm-main {
@@ -618,7 +659,6 @@ header {
         height: fit-content !important;
         width: 460px;
         /* background: white; */
-
     }
 
     .tm-carousel-inner {
@@ -631,7 +671,6 @@ header {
         margin-left: 0px;
         margin-top: 0px;
     }
-
 }
 
 /* testimonials - end */
@@ -652,8 +691,6 @@ header {
     justify-content: end;
     padding: 0px 30px;
 }
-
-
 
 .partners-heding h3 {
     font-size: 50px;
@@ -677,7 +714,7 @@ header {
     align-items: center;
 }
 
-.partners-logo .p-logo:nth-child(-n+4) {
+.partners-logo .p-logo:nth-child(-n + 4) {
     margin-bottom: 170px;
 }
 
@@ -697,7 +734,7 @@ header {
         gap: 70px;
     }
 
-    .partners-logo .p-logo:nth-child(-n+4) {
+    .partners-logo .p-logo:nth-child(-n + 4) {
         margin-bottom: 0px;
     }
 }
@@ -718,8 +755,6 @@ header {
     width: 100%;
     height: 100%;
 }
-
-.blog-head {}
 
 .blog-head h3 {
     font-size: 50px;
@@ -760,9 +795,6 @@ header {
     .blog {
         padding: 100px 30px;
     }
-
-
-
 }
 
 /* blog -  end*/
@@ -924,7 +956,6 @@ header {
         width: auto;
     }
 }
-
 
 /* contact - end */
 
