--- a/assect/css/projects.css
+++ b/assect/css/projects.css
@@ -344,3 +344,194 @@ header {
 /* result - end */
 
 /* project page - end */
+
+
+
+
+/* Responsive */
+/* Mobile View */
+@media screen and (min-width: 350px) and (max-width:768px) {
+    /* header{
+        display: none;
+    } */
+
+    /* Project banner*/
+    .project-banner {
+        margin-bottom: 20px;
+        width: 100%;
+        height: 100%;
+        display: block;
+        background-position: center;
+        background-size: 300%;
+        background-repeat: no-repeat;
+    }
+
+    .project-banner-main {
+        width: 100%;
+        margin: auto;
+        padding: 0px 30px;
+    }
+
+    .project-banner-inner {
+        display: block;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .banner-head {
+        font-size: 60px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .banner-info {
+        display: block;
+    }
+
+    .banner-info>div {
+        width: 100%;
+    }
+
+    .banner-info h4 {
+        font-size: 13px;
+    }
+
+    /* Project Info */
+    .project-info {
+        width: auto;
+        height: auto;
+        padding: 10px;
+        display: block;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .project-info-main {
+        width: 100%;
+    }
+
+    .project-info-main p {
+        line-height: 35px;
+        font-weight: normal;
+        font-size: 20px;
+    }
+
+    .project-info-main a {
+        color: red;
+    }
+
+    /* Brief */
+    .breaf-main {
+        margin-top: 50px !important;
+        width: 100%;
+        margin: 0px;
+    }
+
+    .breaf-img {
+        display: block;
+        margin-bottom: 50px;
+    }
+
+    .breaf-img img {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+
+    .breaf-con {
+        width: auto;
+        text-align: center;
+        line-height: 30px;
+        margin: 0px;
+    }
+
+    .breaf-head h3 {
+        font-size: 40px;
+        font-weight: 400;
+        margin-bottom: 50px;
+    }
+
+    .breaf-con p:last-child {
+        margin-top: 15px;
+    }
+
+    .project-video {
+        margin-top: 100px;
+        width: 100%;
+        height: 500px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-video-play {
+        height: 100px;
+        width: 100px;
+        border: 2px solid white;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-video-play i {
+        font-size: 30px;
+    }
+
+    /* Result */
+    .result {
+        display: block;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 150px;
+    }
+
+    .result-head {
+        margin: 100px 0px 60px 0px;
+    }
+
+    .result-head h3 {
+        font-size: 45px;
+        font-weight: 400;
+    }
+
+    .result-info {
+        width: 100%;
+        margin: 0px auto 80px auto;
+        line-height: 24px;
+    }
+
+    .result-img {
+        height: 250px;
+        width: 100%;
+    }
+
+    .result-img img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .rh-inner {
+        margin: 100px auto;
+        height: 120px;
+        width: 120px;
+        background-color: rgb(43, 43, 43);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+
+    .rh-inner i {
+        font-size: 50px;
+    }
+
+}
