--- a/assect/css/blog.css
+++ b/assect/css/blog.css
@@ -1,6 +1,13 @@
 /* common code - start */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+
+:root {
+    --para-color: rgba(255, 255, 255, 0.6);
+    --red: rgba(207, 0, 15, 0.886);
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,6 +21,17 @@ body {
     position: relative;
     width: 100%;
     scrollbar-width: thin;
+}
+
+.scroll-effect-main {
+    scroll-snap-type: y mandatory;
+    height: fit-content;
+    overflow-y: scroll;
+}
+
+.scroll-effect {
+    scroll-snap-align: start;
+    height: fit-content;
 }
 
 a {
@@ -42,6 +60,7 @@ a {
 header {
     position: fixed;
     width: 100%;
+    z-index: 100;
 }
 
 .base {
@@ -51,7 +70,9 @@ header {
     position: relative;
     padding-top: 40px;
     padding-bottom: 40px;
-    border-bottom: 1px solid;
+    height: 108px;
+    /* position: fixed; */
+    z-index: 100;
 }
 
 .logo img {
@@ -137,15 +158,130 @@ header {
     font-size: 15px;
 }
 
+.res-nav-icon img {
+    height: 30px;
+    width: 30px;
+}
+
 /* nav bar - media - start */
 @media only screen and (max-width: 1500px) {
-    .base {
+
+    .head-nav,
+    .num,
+    .social {
         display: none;
+    }
+
+    .base {
+        justify-content: space-between;
+        padding: 0px 60px;
     }
 }
 
-/* nav bar - media - end */
+@media only screen and (min-width: 1500px) {
+    .res-nav-icon img {
+        display: none;
+    }
 
+}
+
+@media only screen and (max-width: 600px) {
+    .res-nav {
+        z-index: 1000;
+        width: 412px;
+        height: 912px;
+        padding: 0px;
+        border: 1px dashed white;
+        margin: 0px;
+        position: absolute;
+
+    }
+
+    .res-nav-inner {
+        height: 673px;
+        width: 352px;
+        border: 1px dashed red;
+    }
+}
+
+/* responsive nav bar - start */
+.res-nav {
+    display: none;
+}
+
+.res-nav {
+    z-index: 100;
+    height: 100vh;
+    width: 500px;
+    position: fixed;
+    background-color: black;
+    right: 0px;
+    padding: 40px 55px;
+}
+
+.res-nav-inner {
+    height: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.rn-language {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 95px;
+}
+
+.lng a {
+    color: red;
+}
+
+.lng a:nth-last-child(-n + 2) {
+    margin-left: 20px;
+}
+
+.cancel img {
+    height: 28px;
+    width: 28px;
+}
+
+.rs-menu {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.rs-menu li {
+    list-style-type: none;
+    padding: 10px;
+}
+
+.rs-menu li a {
+    padding: 5px 0;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.rs-link {
+    padding-top: 95px;
+}
+
+.rsl-social {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 50px;
+}
+
+.rsl-social i {
+    font-size: 25px;
+}
+
+.rsl-copyright {
+    font-size: 15px;
+}
+
+/* responsive nav bar - end */
 /* nav bar - end */
 /* common code - end */
 
@@ -536,7 +672,7 @@ header {
         height: 493px;
         width: 100%;
     }
-    
+
     .blog-quote-con-inner {
         margin-left: 0px;
         height: 493px;
