--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -60,6 +60,7 @@ a {
 header {
     position: fixed;
     width: 100%;
+    z-index: 100;
 }
 
 .base {
@@ -281,10 +282,9 @@ header {
 }
 
 /* responsive nav bar - end */
-
-@media only screen and (min-width: 1500px) {}
-
 /* nav bar - end */
+
+
 /* common code - end */
 
 /* home - start */
@@ -584,21 +584,25 @@ header {
 .projects {
     width: 100%;
     padding: 120px;
-    border: 1px dashed white;
+    /* border: 1px dashed white; */
     background-image: url(../img/projects.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: -1;
 }
 
 .projects-main {
-    border: 1px dashed white;
+    /* border: 1px dashed white; */
     padding: 0px 30px;
+    position: relative;
 }
 
 .project-show {
-    border: 1px dashed green;
-    margin: 100px 0px;
+    /* border: 1px dashed green; */
+    margin: 100px auto;
+    width: 1050px;
 }
 
 .project-head h1 {
@@ -622,16 +626,33 @@ header {
     padding: 15px 45px;
 }
 
-.project-nav .btn {
-    height: 20px;
-    width: 20px;
-    border: none;
-    border-radius: 50%;
+.project-nav {
+    margin-top: 100px;
 }
 
 .project-nav .btn:nth-last-child(-n + 2) {
     margin-left: 20px;
 }
+
+.pro-btn {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.pro-btn i {
+    font-size: 50px;
+}
+
+.pro-btn-l {
+    left: 0px;
+}
+
+.pro-btn-r {
+    right: 0px;
+}
+
+/* .project-main */
 
 @media only screen and (max-width: 600px) {
     .projects {
@@ -648,8 +669,18 @@ header {
 
 /* education - start */
 .education {
-    width: 100%;
-    height: 730px;
+    padding: 120px;
+}
+
+.education-main {
+    width: 1010px;
+    margin: 0px auto;
+    padding: 0px 30px;
+}
+
+.envato,
+.twiter {
+    display: none;
 }
 
 /* education - end */
@@ -925,6 +956,7 @@ header {
 }
 
 .blog-card {
+    /* z-index: 0; */
     width: 360px;
     height: 495px;
     margin: 0px 10px;
