--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -186,7 +186,6 @@ header {
 
 @media only screen and (max-width: 600px) {
     .base {
-        border: 1px dashed;
         padding: 30px;
     }
 
@@ -596,15 +595,11 @@ header {
 /* about - end */
 
 /* projects - start */
-.project2,
-.project3 {
-    display: none;
-}
+
 
 .projects {
     width: 100%;
     padding: 120px;
-    border: 1px dashed white;
     background-image: url(../img/projects.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -673,20 +668,62 @@ header {
     right: 0px;
 }
 
-/* .project-main */
+.swiper-pagination-project {
+    background-color: #333333;
+    width: fit-content;
+}
+
+.swiper-pagination-project-bullet {
+    background-color: lightgray;
+    /* Light gray for inactive bullets */
+    border: 1px solid #ddd;
+    /* Optional: Add a border */
+}
+
+.swiper-pagination-project-bullet-active {
+    background-color: orange;
+    /* Orange for active bullet */
+}
+
+.project-button-main div[class^="swiper-button"]::after {
+    /* display: none; */
+    color: gray;
+}
+
+/* .project-button-main {
+    display: none;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    display: none;
+} */
+
+@media only screen and (max-width: 1000px) {
+    .project-button-main {
+        display: none;
+    }
+
+}
 
 @media only screen and (max-width: 600px) {
     .projects {
         padding: 120px 0px;
     }
 
-    .project-show{
+    .project-show {
         width: fit-content;
     }
+
     .project-des,
     .project-des p {
         width: 347px;
     }
+
+    .project-button-main {
+        display: none;
+    }
+
 }
 
 /* projects - end */
@@ -702,10 +739,10 @@ header {
     padding: 0px 30px;
 }
 
-.envato,
+/* .envato,
 .twiter {
     display: none;
-}
+} */
 
 /* education - end */
 
