--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -27,9 +27,11 @@ body {
     scroll-snap-type: y mandatory;
     height: fit-content;
     overflow-y: scroll;
+    border: 3px dashed green;
 }
 
 .scroll-effect {
+    border: 3px dashed white;
     scroll-snap-align: start;
     height: fit-content;
 }
@@ -73,6 +75,10 @@ header {
     height: 108px;
     /* position: fixed; */
     z-index: 100;
+}
+
+.base-active {
+    background-color: #2f2525;
 }
 
 .logo img {
