--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -61,13 +61,13 @@ a {
     height: 100vh;
     width: 100vw;
     /* border: 1px solid; */
-    background-color: #2f2525;
+    background-color: rgb(22, 22, 22);
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 0px;
-    left: 0px   ;
+    left: 0px;
     /* transform: translate(-50%, -50%); */
 }
 
@@ -182,7 +182,7 @@ header {
 }
 
 .base-active {
-    background-color: #2f2525;
+    background-color: rgb(22, 22, 22);
 }
 
 .logo img {
@@ -638,7 +638,7 @@ header {
     border-radius: 5px;
 }
 
-.r1 {
+/* .r1 {
     width: 70%;
 }
 
@@ -648,7 +648,7 @@ header {
 
 .r3 {
     width: 90%;
-}
+} */
 
 .range-counter {
     display: flex;
