--- a/assect/css/projects.css
+++ b/assect/css/projects.css
@@ -54,6 +54,110 @@ a {
 
 /* scrollbar - end */
 
+/* loader - start */
+.loader-main {
+  z-index: 9999;
+  height: 100vh;
+  width: 100vw;
+  /* border: 1px solid; */
+  background-color: rgb(22, 22, 22);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  /* transform: translate(-50%, -50%); */
+}
+
+.loader-inner {
+  height: 130px;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.big {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: rgb(175, 15, 15);
+  animation: bigAni 1.5s linear infinite;
+  position: relative;
+}
+
+.small {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: rgba(204, 0, 0, 0.729);
+  animation: smallAni 1.5s linear infinite;
+}
+
+.hidden {
+  display: none;
+}
+
+@keyframes bigAni {
+  0% {
+    width: 100px;
+    height: 100px;
+  }
+
+  25% {
+    width: 50px;
+    height: 50px;
+  }
+
+  50% {
+    width: 0px;
+    height: 0px;
+  }
+
+  75% {
+    width: 50px;
+    height: 50px;
+  }
+
+  100% {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@keyframes smallAni {
+  0% {
+    width: 0px;
+    height: 0px;
+  }
+
+  25% {
+    width: 50px;
+    height: 50px;
+  }
+
+  50% {
+    width: 100px;
+    height: 100px;
+  }
+
+  75% {
+    width: 50px;
+    height: 50px;
+  }
+
+  100% {
+    width: 0px;
+    height: 0px;
+  }
+}
+
+/* loader - end */
 /* nav bar - start */
 header {
   position: fixed;
